--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,5 +1,8 @@
 
 
 <section>
-  <span ng-click="mc.logout()"><img ng-src="../assets/images/icons/logout.ico"> LOGOUT </span>
+  <span ng-click="mc.logout()"><img ng-src="../assets/images/icons/logout.ico" class="logout-icon"> LOGOUT </span>
+</section>
+<section data-root="https://webapiv2.navionics.com/dist/webapi/images">
+  <div class="test_map_div" ></div>
 </section>
