--- a/public/styles/desktop-styles.css
+++ b/public/styles/desktop-styles.css
@@ -19,9 +19,16 @@ body {
   width: 100vw;
 }
 
+.logout-icon {
+  height: 20px;
+}
 
 
-
+.test_map_div {
+  margin: 0;
+  width: 100%;
+  height: 70%;
+}
 
 /*====================*/
 /*                    */
