--- a/public/styles/mobile-styles.css
+++ b/public/styles/mobile-styles.css
@@ -7,8 +7,12 @@
 /*                    */
 /*====================*/
   .login-input-container img {
-    width: 30vw;
-    margin: 30px 0px;
+    width: 50vw;
+    margin: 0px 0px 50px 0px;
+  }
+  .login-input-container h1 {
+    font-size: 3.5em;
+    margin: 0px 0px 90px 0px;
   }
   .login-input-container input {
     width: 70%;
@@ -19,4 +23,6 @@
 
 
 
+
+/* end @media */
 }
