--- a/public/views/auth/login.html
+++ b/public/views/auth/login.html
@@ -1,11 +1,12 @@
 
 
     <section class="flex-login-container">
-      <section class="login-message-container">
+      <!-- <section class="login-message-container">
         <h1> {{login.message}} </h1>
-      </section>
+      </section> -->
       <section class="login-input-container">
-        <img ng-src="../../assets/images/icons/favicon.ico" >
+        <!-- <img ng-src="../../assets/images/icons/favicon.ico" > -->
+        <h1> Fishing Spots </h1>
         <input ng-model="login.user.username" type="text" placeholder="Username">
         <input ng-model="login.user.password" type="password" placeholder="Password">
         <button ng-click="login.login(lc.user)" type="button"> Login </button>
