--- a/public/views/auth/register.html
+++ b/public/views/auth/register.html
@@ -1,10 +1,11 @@
 
 <section class="flex-login-container">
-  <section class="login-message-container">
+  <!-- <section class="login-message-container">
     <h1> {{reg.message}} </h1>
-  </section>
+  </section> -->
   <section class="login-input-container">
-    <img ng-src="../../assets/images/icons/favicon.ico" >
+    <!-- <img ng-src="../../assets/images/icons/favicon.ico" > -->
+    <h1> Fishing Spots </h1>
     <input type="text" ng-model="reg.user.username" placeholder="Username" />
     <input type="password" ng-model="reg.user.password" placeholder="Password" />
     <input type="password" ng-model="reg.user.email" placeholder="Email" />
