--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,8 +1,19 @@
 
 
-<section>
-  <span ng-click="mc.logout()"><img ng-src="../assets/images/icons/logout.ico" class="logout-icon"> LOGOUT </span>
-</section>
-<section data-root="https://webapiv2.navionics.com/dist/webapi/images">
-  <div class="test_map_div" ></div>
+<section class="flex-main-container">
+
+  <section class="flex-main_nav-container">
+    <span ng-click="mc.logout()"><img ng-src="../assets/images/icons/logout.ico" class="logout-icon"> LOGOUT </span>
+    <label for=""> Species</label>
+      <select>
+        <option value=""> Walleye </option>
+      </select>
+    <label for=""> Time of Year </label>
+      <input type="date">
+  </section>
+
+  <section class="flex-main_map-container" data-root="https://webapiv2.navionics.com/dist/webapi/images">
+    <div class="test_map_div" ></div>
+  </section>
+
 </section>
