--- a/public/styles/desktop-styles.css
+++ b/public/styles/desktop-styles.css
@@ -130,11 +130,27 @@ body {
     flex-direction: row;
     align-items: center;
     width: 100vw;
-    height: 6%;
+    height: 8%;
     background-color: #244bd7;
     color: #ffffff;
   }
-    .flex-main_nav-container label {
+    .flex-main_nav-container span {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      margin-left: 20px;
+    }
+    .flex-main_nav-container span:hover {
+      cursor: pointer;
+    }
+    .flex-main_nav-container .leading_div {
+      margin-left: 60px;
+    }
+    .flex-main_nav-container div {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       margin-left: 20px;
     }
 
@@ -142,7 +158,7 @@ body {
     display: flex;
     flex-direction: row;
     width: 100vw;
-    height: 94%;
+    height: 92%;
   }
     .test_map_div {
       margin: 0;
