--- a/public/views/main.html
+++ b/public/views/main.html
@@ -4,12 +4,16 @@
 
   <section class="flex-main_nav-container">
     <span ng-click="mc.logout()"><img ng-src="../assets/images/icons/logout.ico" class="logout-icon"> LOGOUT </span>
-    <label for=""> Species</label>
-      <select>
-        <option value=""> Walleye </option>
-      </select>
-    <label for=""> Time of Year </label>
-      <input type="date">
+    <div class="leading_div">
+      <label> Species</label>
+        <select>
+          <option> Walleye </option>
+        </select>
+    </div>
+    <div>
+      <label> Time of Year </label>
+        <input type="date">
+    </div>
   </section>
 
   <section class="flex-main_map-container" data-root="https://webapiv2.navionics.com/dist/webapi/images">
