--- a/public/views/main.html
+++ b/public/views/main.html
@@ -13,13 +13,46 @@
       <label> Time of Year </label>
         <input type="date">
     </div>
-    <!-- <div ng-repeat="weather in mc.weatherResponse">
-      <p>{{weather.daily.data[0]}}</p>
-    </div> -->
   </section>
 
   <section class="flex-main_map-container" data-root="https://webapiv2.navionics.com/dist/webapi/images">
     <div class="test_map_div" ></div>
   </section>
 
+  <section ng-repeat="weather in mc.weatherResponse" class="flex-weather_nav-container">
+  <!-- <div ng-repeat="weather in mc.weatherResponse"> -->
+    <div>
+      <span><h6> High </h6><p>{{weather.daily.data[0].temperatureMax}}</p></span>
+      <span><h6> Low </h6><p>{{weather.daily.data[0].temperatureLow}}</p></span>
+    </div>
+    <div>
+      <span><h6> High </h6><p>{{weather.daily.data[1].temperatureMax}}</p></span>
+      <span><h6> Low </h6><p>{{weather.daily.data[1].temperatureLow}}</p></span>
+    </div>
+    <div>
+      <span><h6> High </h6><p>{{weather.daily.data[2].temperatureMax}}</p></span>
+      <span><h6> Low </h6><p>{{weather.daily.data[2].temperatureLow}}</p></span>
+    </div>
+    <div>
+      <span><h6> High </h6><p>{{weather.daily.data[3].temperatureMax}}</p></span>
+      <span><h6> Low </h6><p>{{weather.daily.data[3].temperatureLow}}</p></span>
+    </div>
+    <div>
+      <span><h6> High </h6><p>{{weather.daily.data[4].temperatureMax}}</p></span>
+      <span><h6> Low </h6><p>{{weather.daily.data[4].temperatureLow}}</p></span>
+    </div>
+    <div>
+      <span><h6> High </h6><p>{{weather.daily.data[5].temperatureMax}}</p></span>
+      <span><h6> Low </h6><p>{{weather.daily.data[5].temperatureLow}}</p></span>
+    </div>
+    <div>
+      <span><h6> High </h6><p>{{weather.daily.data[6].temperatureMax}}</p></span>
+      <span><h6> Low </h6><p>{{weather.daily.data[6].temperatureLow}}</p></span>
+    </div>
+    <div>
+      <span><h6> High </h6><p>{{weather.daily.data[7].temperatureMax}}</p></span>
+      <span><h6> Low </h6><p>{{weather.daily.data[7].temperatureLow}}</p></span>
+    </div>
+  </section>
+<!-- end of main container -->
 </section>
