--- a/public/views/main.html
+++ b/public/views/main.html
@@ -30,12 +30,12 @@
   <section ng-repeat="weather in mc.weatherResponse" class="flex-weather_nav-container">
 <!-- shows when location is not present -->
     <div ng-show="weather.daily == null">
-      <h3> Searching for current location ... </h3>
+      <h3> Searching For Current Location ... </h3>
     </div>
-<!-- shows when location is present -->
+<!-- rest shows when location is present -->
     <div ng-hide="weather.daily == null">
-      <h4 ng-hide="weather.daily == null"> {{weather.daily.data[0].time * 1000 | date:'MM-dd-yy'}} </h4>
-      <span><h6 class="temp_high"> High </h6><h5>{{weather.daily.data[0].temperatureMax}}</h5></span>
+      <h4> {{weather.daily.data[0].time * 1000 | date:'MM-dd-yy'}} </h4>
+      <span><h6 class="temp_high"> High </h6><h5>{{weather.daily.data[0].temperatureMax}} &#8457; </h5></span>
       <span><h6 class="temp_low"> Low </h6><h5>{{weather.daily.data[0].temperatureLow}}</h5></span>
     </div>
     <div ng-hide="weather.daily == null">
