--- a/public/views/main.html
+++ b/public/views/main.html
@@ -30,43 +30,52 @@
   <section ng-repeat="weather in mc.weatherResponse" class="flex-weather_nav-container">
 <!-- shows when location is not present -->
     <div ng-show="weather.daily == null">
-      <h3> Searching For Current Location ... </h3>
+      <span>
+      <h3> Searching For Current Location </h3>
+      <div class="la-ball-running-dots">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      </span>
     </div>
 <!-- rest shows when location is present -->
-    <div ng-hide="weather.daily == null">
-      <h4> {{weather.daily.data[0].time * 1000 | date:'MM-dd-yy'}} </h4>
-      <span><h6 class="temp_high"> High </h6><h5>{{weather.daily.data[0].temperatureMax}} &#8457; </h5></span>
-      <span><h6 class="temp_low"> Low </h6><h5>{{weather.daily.data[0].temperatureLow}}</h5></span>
-    </div>
+    <a href="#" tooltips tooltip-template-url="./views/templates/tooltips/weather.html"><div ng-hide="weather.daily == null">
+      <h4> {{weather.daily.data[0].time * 1000 | date:'MM-dd-yy'}}</h4>
+      <span><h6 class="temp_high"> High &#8457;</h6><h5>{{weather.daily.data[0].temperatureMax}}</h5></span>
+      <span><h6 class="temp_low"> Low &#8457;</h6><h5>{{weather.daily.data[0].temperatureLow}}</h5></span>
+    </div> </a>
     <div ng-hide="weather.daily == null">
       <h4> {{weather.daily.data[1].time * 1000 | date:'MM-dd-yy'}} </h4>
-      <span><h6 class="temp_high"> High </h6><h5>{{weather.daily.data[1].temperatureMax}}</h5></span>
-      <span><h6 class="temp_low"> Low </h6><h5>{{weather.daily.data[1].temperatureLow}}</h5></span>
+      <span><h6 class="temp_high"> High &#8457;</h6><h5>{{weather.daily.data[1].temperatureMax}}</h5></span>
+      <span><h6 class="temp_low"> Low &#8457;</h6><h5>{{weather.daily.data[1].temperatureLow}}</h5></span>
     </div>
     <div ng-hide="weather.daily == null">
       <h4> {{weather.daily.data[2].time * 1000 | date:'MM-dd-yy'}} </h4>
-      <span><h6 class="temp_high"> High </h6><h5>{{weather.daily.data[2].temperatureMax}}</h5></span>
-      <span><h6 class="temp_low"> Low </h6><h5>{{weather.daily.data[2].temperatureLow}}</h5></span>
+      <span><h6 class="temp_high"> High &#8457;</h6><h5>{{weather.daily.data[2].temperatureMax}}</h5></span>
+      <span><h6 class="temp_low"> Low &#8457;</h6><h5>{{weather.daily.data[2].temperatureLow}}</h5></span>
     </div>
     <div ng-hide="weather.daily == null">
       <h4> {{weather.daily.data[3].time * 1000 | date:'MM-dd-yy'}} </h4>
-      <span><h6 class="temp_high"> High </h6><h5>{{weather.daily.data[3].temperatureMax}}</h5></span>
-      <span><h6 class="temp_low"> Low </h6><h5>{{weather.daily.data[3].temperatureLow}}</h5></span>
+      <span><h6 class="temp_high"> High &#8457;</h6><h5>{{weather.daily.data[3].temperatureMax}}</h5></span>
+      <span><h6 class="temp_low"> Low &#8457;</h6><h5>{{weather.daily.data[3].temperatureLow}}</h5></span>
     </div>
     <div ng-hide="weather.daily == null">
       <h4> {{weather.daily.data[4].time * 1000 | date:'MM-dd-yy'}} </h4>
-      <span><h6 class="temp_high"> High </h6><h5>{{weather.daily.data[4].temperatureMax}}</h5></span>
-      <span><h6 class="temp_low"> Low </h6><h5>{{weather.daily.data[4].temperatureLow}}</h5></span>
+      <span><h6 class="temp_high"> High &#8457;</h6><h5>{{weather.daily.data[4].temperatureMax}}</h5></span>
+      <span><h6 class="temp_low"> Low &#8457;</h6><h5>{{weather.daily.data[4].temperatureLow}}</h5></span>
     </div>
     <div ng-hide="weather.daily == null">
       <h4> {{weather.daily.data[5].time * 1000 | date:'MM-dd-yy'}} </h4>
-      <span><h6 class="temp_high"> High </h6><h5>{{weather.daily.data[5].temperatureMax}}</h5></span>
-      <span><h6 class="temp_low"> Low </h6><h5>{{weather.daily.data[5].temperatureLow}}</h5></span>
+      <span><h6 class="temp_high"> High &#8457;</h6><h5>{{weather.daily.data[5].temperatureMax}}</h5></span>
+      <span><h6 class="temp_low"> Low &#8457;</h6><h5>{{weather.daily.data[5].temperatureLow}}</h5></span>
     </div>
     <div ng-hide="weather.daily == null">
       <h4> {{weather.daily.data[6].time * 1000 | date:'MM-dd-yy'}} </h4>
-      <span><h6 class="temp_high"> High </h6><h5>{{weather.daily.data[6].temperatureMax}}</h5></span>
-      <span><h6 class="temp_low"> Low </h6><h5>{{weather.daily.data[6].temperatureLow}}</h5></span>
+      <span><h6 class="temp_high"> High &#8457;</h6><h5>{{weather.daily.data[6].temperatureMax}}</h5></span>
+      <span><h6 class="temp_low"> Low &#8457;</h6><h5>{{weather.daily.data[6].temperatureLow}}</h5></span>
     </div>
   </section>
 
