--- a/public/styles/alert-styles.css
+++ b/public/styles/alert-styles.css
@@ -5,7 +5,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 15vw;
+  width: 40vw;
+  /* margin: 0px 50px; */
 }
 .alertMessage img {
   height: 25px;
