--- a/public/views/templates/tooltips/weather_5.html
+++ b/public/views/templates/tooltips/weather_5.html
@@ -1,6 +1,6 @@
 
 <h3>{{weather.daily.data[5].time * 1000 | date:'MMM d, y'}}</h3>
-<h1> {{weather.daily.data[5].icon}} </h1>
+<img ng-src="../../assets/images/icons/weather/{{weather.daily.data[5].icon}}.png">
 <span><h6 class="temp_high"> High </h6><h5>{{weather.daily.data[5].temperatureMax}}&#8457;</h5></span>
 <span><h6 class="temp_high"> Time </h6><h5>{{weather.daily.data[5].temperatureMaxTime * 1000 | date:'h:mm a'}}</h5></span>
 <span><h6 class="temp_low"> Low </h6><h5>{{weather.daily.data[5].temperatureMin}}&#8457;</h5></span>
