--- a/public/styles/desktop-styles.css
+++ b/public/styles/desktop-styles.css
@@ -145,10 +145,18 @@ body {
   background-color: #18358e;
   color: #ffffff;
 }
+.flex-main_nav-container .flex-main_nav-select {
+  display: flex;
+  flex: 2;
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
+}
 .flex-main_nav-container span {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   margin-left: 20px;
 }
 .flex-main_nav-container span:hover {
@@ -164,6 +172,39 @@ body {
   align-items: center;
   margin-left: 20px;
   text-shadow: 1px 1px 1px #000000;
+}
+.flex-main_nav-container select {
+  width: 130px;
+}
+.flex-main_nav-container select:hover {
+  cursor: pointer;
+}
+.flex-main_nav-container button {
+  margin-left: 20px;
+  height: 60%;
+  width: 100px;
+  border-radius: 7px;
+  outline: none;
+}
+.flex-main_nav-container button:hover {
+  cursor: pointer;
+  background-color: #18358e;
+  color: #ffffff;
+}
+.flex-main_nav-container .flex-main_nav-weather {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  height: 100%;
+}
+.flex-main_nav-weather span {
+  margin-right: 40px;
+}
+.flex-main_nav-weather img {
+  height: 5vh;
+  margin-right: 5px;
 }
 
 
