--- a/public/views/main.html
+++ b/public/views/main.html
@@ -3,24 +3,40 @@
 <section class="flex-main-container">
 
   <section class="flex-main_nav-container">
-    <span ng-click="mc.logout()"><img ng-src="../assets/images/icons/logout.ico" class="logout-icon"> LOGOUT </span>
-    <div class="leading_div">
-      <label> Species</label>
-        <select>
-          <option> Bluegill </option>
-          <option> Crappie </option>
-          <option> Perch </option>
-          <option> Walleye </option>
-          <option> Northern Pike </option>
-          <option> Sturgeon </option>
-          <option> Catfish </option>
-          <option> White Fish </option>
-        </select>
-    </div>
-    <div>
-      <label> Time of Year </label>
-        <input type="date">
-    </div>
+    <section class="flex-main_nav-select">
+      <span ng-click="mc.logout()"><img ng-src="../assets/images/icons/logout.ico" class="logout-icon"> LOGOUT </span>
+      <div class="leading_div">
+        <label> Species </label>
+          <select ng-model="mc.query.species">
+            <option value=""></option>
+            <option value="blugill"> Bluegill </option>
+            <option value="crappie"> Crappie </option>
+            <option value="perch"> Perch </option>
+            <option value="walleye"> Walleye </option>
+            <option value="northernPike"> Northern Pike </option>
+            <option value="sturgeon"> Sturgeon </option>
+            <option value="catfish"> Catfish </option>
+            <option value="whitefish"> White Fish </option>
+          </select>
+      </div>
+      <div>
+        <label> Time of Year </label>
+          <select ng-model="mc.query.timeOfYear">
+            <option value=""></option>
+            <option value="earlyIce"> Early Ice </option>
+            <option value="midIce"> Mid Ice </option>
+            <option value="lateIce"> Late Ice </option>
+            <option value="spring"> Spring </option>
+            <option value="midSummer"> Mid Summer </option>
+            <option value="fall"> Fall </option>
+          </select>
+      </div>
+      <button type="button" ng-click="mc.searchQuery(mc.query)"> Get Info </button>
+    </section>
+    <section class="flex-main_nav-weather">
+      <span><img ng-src="../../assets/images/icons/avitar.ico"> <h1>{{mc.userObject.userName}}</h1>
+    </section>
+
   </section>
 
   <section class="flex-main_map-container" data-root="https://webapiv2.navionics.com/dist/webapi/images">
@@ -41,6 +57,7 @@
       </div>
       </span>
     </div>
+
 <!-- rest shows when location is present -->
     <a tooltips tooltip-template-url="./views/templates/tooltips/weather_0.html">
       <div ng-hide="weather.daily == null" class="forecast_data_container">
@@ -52,6 +69,7 @@
         <img ng-src="./assets/images/icons/weather/{{weather.daily.data[0].icon}}.png">
       </div>
     </a>
+
     <a tooltips tooltip-template-url="./views/templates/tooltips/weather_1.html">
       <div ng-hide="weather.daily == null" class="forecast_data_container">
         <h4> {{weather.daily.data[1].time * 1000 | date:'EEE MMM dd'}} </h4>
@@ -62,6 +80,7 @@
         <img ng-src="./assets/images/icons/weather/{{weather.daily.data[1].icon}}.png">
       </div>
     </a>
+
     <a tooltips tooltip-template-url="./views/templates/tooltips/weather_2.html">
       <div ng-hide="weather.daily == null" class="forecast_data_container">
         <h4> {{weather.daily.data[2].time * 1000 | date:'EEE MMM dd'}} </h4>
@@ -72,6 +91,7 @@
         <img ng-src="./assets/images/icons/weather/{{weather.daily.data[2].icon}}.png">
       </div>
     </a>
+
     <a tooltips tooltip-template-url="./views/templates/tooltips/weather_3.html">
       <div ng-hide="weather.daily == null" class="forecast_data_container">
         <h4> {{weather.daily.data[3].time * 1000 | date:'EEE MMM dd'}} </h4>
@@ -82,6 +102,7 @@
         <img ng-src="./assets/images/icons/weather/{{weather.daily.data[3].icon}}.png">
       </div>
     </a>
+
     <a tooltips tooltip-template-url="./views/templates/tooltips/weather_4.html">
       <div ng-hide="weather.daily == null" class="forecast_data_container">
         <h4> {{weather.daily.data[4].time * 1000 | date:'EEE MMM dd'}} </h4>
@@ -92,6 +113,7 @@
         <img ng-src="./assets/images/icons/weather/{{weather.daily.data[4].icon}}.png">
       </div>
     </a>
+
     <a tooltips tooltip-template-url="./views/templates/tooltips/weather_5.html">
       <div ng-hide="weather.daily == null" class="forecast_data_container">
         <h4> {{weather.daily.data[5].time * 1000 | date:'EEE MMM dd'}} </h4>
@@ -102,6 +124,7 @@
         <img ng-src="./assets/images/icons/weather/{{weather.daily.data[5].icon}}.png">
       </div>
     </a>
+
     <a tooltips tooltip-template-url="./views/templates/tooltips/weather_6.html">
       <div ng-hide="weather.daily == null" class="forecast_data_container">
         <h4> {{weather.daily.data[6].time * 1000 | date:'EEE MMM dd'}} </h4>
