--- a/public/views/main.html
+++ b/public/views/main.html
@@ -4,7 +4,7 @@
 
   <section class="flex-main_nav-container">
     <section class="flex-main_nav-select">
-      <span ng-click="mc.logout()"><img ng-src="../assets/images/icons/logout.ico" class="logout-icon"> LOGOUT </span>
+      <span ng-click="mc.logout()" class="logout_span"><img ng-src="../assets/images/icons/logout.ico" class="logout-icon"> LOGOUT </span>
       <div class="leading_div">
         <label> Species </label>
           <select ng-model="mc.query.species">
