--- a/public/styles/desktop-styles.css
+++ b/public/styles/desktop-styles.css
@@ -18,6 +18,37 @@ body {
   height: 100vh;
   width: 100vw;
 }
+/* high temp */
+.temp_high {
+  color: #ff0000;
+  text-shadow: 1px 1px 1px #000000;
+}
+/* low temp */
+.temp_low {
+  color: #00d9ff;
+  text-shadow: 1px 1px 1px #000000;
+}
+/* other */
+.green {
+  color: #00ff1f;
+}
+/* summary */
+.orange {
+  color: #ff5c00;
+}
+/* humidity */
+.purple {
+  color: #ff00e6;
+}
+/* recip. */
+.blue {
+  color: #00ffba;
+}
+/* sunset/sunrise/moonphase */
+.yellow {
+  color: #f2ff00;
+}
+
 
 
 /*====================*/
@@ -113,14 +144,6 @@ body {
 /* logout icon image */
 .logout-icon {
   height: 20px;
-}
-.temp_high {
-  color: #ff0000;
-  text-shadow: 1px 1px 1px #000000;
-}
-.temp_low {
-  color: #00d9ff;
-  text-shadow: 1px 1px 1px #000000;
 }
 
 
