--- a/public/views/templates/tooltips/weather_0.html
+++ b/public/views/templates/tooltips/weather_0.html
@@ -5,12 +5,12 @@
 <span><h6 class="temp_high"> Time </h6><h5>{{weather.daily.data[0].temperatureMaxTime * 1000 | date:'h:mm a'}}</h5></span>
 <span><h6 class="temp_low"> Low </h6><h5>{{weather.daily.data[0].temperatureMin}}&#8457;</h5></span>
 <span><h6 class="temp_low"> Time </h6><h5>{{weather.daily.data[0].temperatureMinTime * 1000 | date:'h:mm a'}}</h5></span>
-<span><h6> Humidity </h6><h5>{{weather.daily.data[0].humidity}}%</h5></span>
-<span><h6> Sunrise </h6><h5>{{weather.daily.data[0].sunriseTime * 1000 | date:'h:mm a'}}</h5></span>
-<span><h6> Sunset </h6><h5>{{weather.daily.data[0].sunsetTime * 1000 | date:'h:mm a'}}</h5></span>
-<span><h6> Moon Phase </h6><h5>{{weather.daily.data[0].moonPhase}}%</h5></span>
-<span><h6> Cloud Cover </h6><h5>{{weather.daily.data[0].cloudCover}}%</h5></span>
-<span><h6> Visibility </h6><h5>{{weather.daily.data[0].visibility}} mi</h5></span>
-<span><h6> Precip Prob. </h6><h5>{{weather.daily.data[0].precipProbability}}%</h5></span>
-<span><h6> Precip Acc. </h6><h5>{{weather.daily.data[0].precipAccumulation}}"</h5></span>
-<h4> Summary </h4><h5>{{weather.daily.data[0].summary}}</h5>
+<span><h6 class="purple"> Humidity </h6><h5>{{weather.daily.data[0].humidity}}%</h5></span>
+<span><h6 class="blue"> Precip Prob. </h6><h5>{{weather.daily.data[0].precipProbability}}%</h5></span>
+<span><h6 class="blue"> Precip Acc. </h6><h5>{{weather.daily.data[0].precipAccumulation}}"</h5></span>
+<span><h6 class="yellow"> Sunrise </h6><h5>{{weather.daily.data[0].sunriseTime * 1000 | date:'h:mm a'}}</h5></span>
+<span><h6 class="yellow"> Sunset </h6><h5>{{weather.daily.data[0].sunsetTime * 1000 | date:'h:mm a'}}</h5></span>
+<span><h6 class="yellow"> Moon Phase </h6><h5>{{weather.daily.data[0].moonPhase}}%</h5></span>
+<span><h6 class="green"> Cloud Cover </h6><h5>{{weather.daily.data[0].cloudCover}}%</h5></span>
+<span><h6 class="green"> Visibility </h6><h5>{{weather.daily.data[0].visibility}} mi</h5></span>
+<h4 class="orange"> Summary </h4><h5>{{weather.daily.data[0].summary}}</h5>
