--- a/public/views/templates/tooltips/weather_1.html
+++ b/public/views/templates/tooltips/weather_1.html
@@ -3,14 +3,14 @@
 <img ng-src="../../assets/images/icons/weather/{{weather.daily.data[1].icon}}.png">
 <span><h6 class="temp_high"> High </h6><h5>{{weather.daily.data[1].temperatureMax}}&#8457;</h5></span>
 <span><h6 class="temp_high"> Time </h6><h5>{{weather.daily.data[1].temperatureMaxTime * 1000 | date:'h:mm a'}}</h5></span>
-<span><h6 class="temp_low"> Low </h6><h5>{{weather.daily.data[0].temperatureMin}}&#8457;</h5></span>
+<span><h6 class="temp_low"> Low </h6><h5>{{weather.daily.data[1].temperatureMin}}&#8457;</h5></span>
 <span><h6 class="temp_low"> Time </h6><h5>{{weather.daily.data[1].temperatureMinTime * 1000 | date:'h:mm a'}}</h5></span>
-<span><h6> Humidity </h6><h5>{{weather.daily.data[1].humidity}}%</h5></span>
-<span><h6> Sunrise </h6><h5>{{weather.daily.data[1].sunriseTime * 1000 | date:'h:mm a'}}</h5></span>
-<span><h6> Sunset </h6><h5>{{weather.daily.data[1].sunsetTime * 1000 | date:'h:mm a'}}</h5></span>
-<span><h6> Moon Phase </h6><h5>{{weather.daily.data[1].moonPhase}}%</h5></span>
-<span><h6> Cloud Cover </h6><h5>{{weather.daily.data[1].cloudCover}}%</h5></span>
-<span><h6> Visibility </h6><h5>{{weather.daily.data[1].visibility}} mi</h5></span>
-<span><h6> Precip Prob. </h6><h5>{{weather.daily.data[1].precipProbability}}%</h5></span>
-<span><h6> Precip Acc. </h6><h5>{{weather.daily.data[1].precipAccumulation}}"</h5></span>
-<h4> Summary </h4><h5>{{weather.daily.data[1].summary}}</h5>
+<span><h6 class="purple"> Humidity </h6><h5>{{weather.daily.data[1].humidity}}%</h5></span>
+<span><h6 class="blue"> Precip Prob. </h6><h5>{{weather.daily.data[1].precipProbability}}%</h5></span>
+<span><h6 class="blue"> Precip Acc. </h6><h5>{{weather.daily.data[1].precipAccumulation}}"</h5></span>
+<span><h6 class="yellow"> Sunrise </h6><h5>{{weather.daily.data[1].sunriseTime * 1000 | date:'h:mm a'}}</h5></span>
+<span><h6 class="yellow"> Sunset </h6><h5>{{weather.daily.data[1].sunsetTime * 1000 | date:'h:mm a'}}</h5></span>
+<span><h6 class="yellow"> Moon Phase </h6><h5>{{weather.daily.data[1].moonPhase}}%</h5></span>
+<span><h6 class="green"> Cloud Cover </h6><h5>{{weather.daily.data[1].cloudCover}}%</h5></span>
+<span><h6 class="green"> Visibility </h6><h5>{{weather.daily.data[1].visibility}} mi</h5></span>
+<h4 class="orange"> Summary </h4><h5>{{weather.daily.data[1].summary}}</h5>
