--- a/public/styles/desktop-styles.css
+++ b/public/styles/desktop-styles.css
@@ -112,6 +112,7 @@ body {
       width: 30%;
       height: 28px;
       margin: 5px 0px;
+      outline: none;
     }
     .login-input-container button {
       width: 20%;
