--- a/public/views/main.html
+++ b/public/views/main.html
@@ -38,21 +38,20 @@
 
 <!-- weather bar -->
   <section ng-repeat="weather in mc.weatherResponse" class="flex-weather_nav-container">
-    <!-- shows when location is not present -->
-    <div ng-show="weather.daily == null">
-      <span>
-      <h3> Searching For Current Location </h3>
-      <div class="la-ball-running-dots">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      </span>
+  <!-- shows when location is not present -->
+    <div ng-show="weather.daily == null" class="loader_weather">
+      <!-- <span class="loader_weather"> -->
+        <h3> Searching For Current Location </h3>
+          <div class="la-ball-running-dots">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+      <!-- </span> -->
     </div>
-
-    <!-- rest shows when location is present -->
+  <!-- rest shows when location is present -->
     <a tooltips tooltip-template-url="./views/templates/tooltips/weather_0.html">
       <div ng-hide="weather.daily == null" class="forecast_data_container">
         <h4> {{weather.daily.data[0].time * 1000 | date:'EEE MMM dd'}}</h4>
@@ -129,6 +128,7 @@
         <img ng-src="./assets/images/icons/weather/{{weather.daily.data[6].icon}}.png">
       </div>
     </a>
+
   </section>
 
 <!-- end of main container -->
