added auth code

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -6,7 +6,7 @@
 
 <!-- nav bar -->
     <section class="flex-main_nav-select">
-      <!-- <span ng-click="mc.logout()" class="logout_span"><img ng-src="../assets/images/icons/logout.ico" class="logout-icon"><h5> LOGOUT </h5></span> -->
+      <span ng-click="mc.logout()" class="logout_span"><img ng-src="../assets/images/icons/logout.ico" class="logout-icon"><h5> LOGOUT </h5></span>
       <div class="leading_div">
         <label> Species </label>
           <select ng-model="mc.query.species">
