added species routes and scoucing to server side

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -10,15 +10,14 @@
       <div class="leading_div">
         <label> Species </label>
           <select ng-model="mc.query.species">
-            <option value=""></option>
             <option value="blugill"> Bluegill </option>
-            <option value="crappie"> Crappie </option>
+            <option value="whiteCrappie"> White Crappie </option>
+            <option value="blackCrappie"> Black Crappie </option>
             <option value="perch"> Perch </option>
             <option value="walleye"> Walleye </option>
             <option value="northernPike"> Northern Pike </option>
-            <option value="sturgeon"> Sturgeon </option>
-            <option value="catfish"> Catfish </option>
-            <option value="whitefish"> White Fish </option>
+            <option value="musky"> Musky </option>
+            <option value="burbot"> Burbot </option>
           </select>
       </div>
       <div>
