added http requests for all species in factory

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -10,9 +10,9 @@
       <div class="leading_div">
         <label> Species </label>
           <select ng-model="mc.query.species">
-            <option value="bluegill"> Bluegill </option>
-            <option value="whiteCrappie"> White Crappie </option>
+            <option value="blueGill"> Bluegill </option>
             <option value="blackCrappie"> Black Crappie </option>
+            <option value="whiteCrappie"> White Crappie </option>
             <option value="perch"> Perch </option>
             <option value="walleye"> Walleye </option>
             <option value="northernPike"> Northern Pike </option>
